fix last image leaves gap on mobile

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -593,7 +593,10 @@ a.carousel-control.right:hover {
     margin-bottom: 0px;
   }
   #project-page .project-col {
-    margin-top: -27px;
+    margin-top: -30px;
+  }
+  .projects-container a:last-child .project-col {
+    margin-bottom: 0px;
   }
   /*#work-page .projects-container,#lab-page .projects-container {
     margin-top: 15px;
